# polimi_recordings_downloader

./: .env.example  .gitignore  Config.py  LICENSE  RecmanParser.py  Recording.py  WebexAPI.py  XlsxGenerator.py  main.py  pyproject.toml  readme.md  requirements.txt
app/: Config.py  Recording.py  __main__.py  xlsx.py
app/aria2c/: __init__.py  generate_input_file.py
app/parsers/: __init__.py  html_parser.py  txt_parser.py
app/webex_api/: __init__.py  extract_id_from_url.py  generate_recording_from_id.py
prd/: __main__.py  aria2c.py  config.py  cookies.py  create_output.py  generate_download_links_file.py  main.py  utils.py  validation.py  xlsx.py
prd/aria2c/: download.py
prd/parsers/: __init__.py  abstract_parser.py  archives_parser.py  txt_parser.py  webeep_parser.py  webpage_parser.py
prd/tests/: test_cookies.py  test_main.py  test_utils.py  test_validation.py
prd/webex_api/: Recording.py  __init__.py  extract_id_from_url.py  generate_recording_from_id.py
