[tool.poetry]
name = "polimi_recordings_downloader"
version = "0.1.0"
description = "Python application to download a batch of lessons recordings from Polimi."
authors = ["Paolo Basso"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
XlsxWriter = "^3.0.3"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.3"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
